--- a/backend/package.json
+++ b/backend/package.json
@@ -4,19 +4,18 @@
     "description": "Backend for CopConnect",
     "main": "server.js",
     "type": "module",
-
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
-      "express": "^4.18.2",
-      "mongoose": "^7.2.0",
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1"
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "mongoose": "^7.8.6",
+        "socket.io": "^4.8.1"
     },
     "devDependencies": {
-      "nodemon": "^3.0.2"
+        "nodemon": "^3.0.2"
     }
-  }
-  
+}
