--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-leaflet": "^5.0.0",
     "react-webcam": "^7.2.0",
     "shadcn-ui": "^0.9.4",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
