--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "aceternity-ui": "^0.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
