--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 MONGO_URI=mongodb+srv://adityaralhan:qwert@cluster0.aigej.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET= aditya
 PORT=5001
+
+CLOUDINARY_CLOUD_NAME=CopConnect
+CLOUDINARY_API_KEY=514899957661255
+CLOUDINARY_API_SECRET=FPjfyIbalBDFNcxkSxJ9hRlq930
