--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,13 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "cloudinary": "^1.41.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "mongoose": "^7.8.6",
+        "multer": "^1.4.5-lts.2",
+        "multer-storage-cloudinary": "^4.0.0",
         "socket.io": "^4.8.1"
     },
     "devDependencies": {
