made backend for anonymous complaints description box

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://adityaralhan:qwert@cluster0.aigej.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET= aditya
+MONGO_URI=mongodb+srv://adityaralhan:qwert@cluster0.aigej.mongodb.net/copconnect
+JWT_SECRET=aditya
 PORT=5001
